APIs/azure.com/servicefabric/6.2.0.9/python-client/README.md
# openapi-client
Service Fabric REST Client APIs allows management of Service Fabric clusters, applications and services.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 6.2.0.9
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to http://azure.local:19080
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "http://azure.local:19080"
)



# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ApplicationApi(api_client)
    api_version = 6.0 # str | The version of the API. This parameter is required and its value must be '6.0'.  Service Fabric REST API version is based on the runtime version in which the API was introduced or was changed. Service Fabric runtime supports more than one version of the API. This is the latest supported version of the API. If a lower API version is passed, the returned response may be different from the one documented in this specification.  Additionally the runtime accept any version that is higher than the latest supported version up to the current version of the runtime. So if the latest API version is 6.0, but if the runtime is 6.1, in order to make it easier to write the clients, the runtime will accept version 6.1 for that API. However the behavior of the API will be as per the documented 6.0 version. (default to 6.0)
    application_description = openapi_client.ApplicationDescription() # ApplicationDescription | Description for creating an application.
    timeout = 60 # int | The server timeout for performing the operation in seconds. This timeout specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. (optional) (default to 60)

    try:
        # Creates a Service Fabric application.
        api_instance.create_application(api_version, application_description, timeout=timeout)
    except ApiException as e:
        print("Exception when calling ApplicationApi->create_application: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *http://azure.local:19080*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApplicationApi* | [**create_application**](docs/ApplicationApi.md#create_application) | **POST** /Applications/$/Create | Creates a Service Fabric application.
*ApplicationApi* | [**delete_application**](docs/ApplicationApi.md#delete_application) | **POST** /Applications/{applicationId}/$/Delete | Deletes an existing Service Fabric application.
*ApplicationApi* | [**get_application_health**](docs/ApplicationApi.md#get_application_health) | **GET** /Applications/{applicationId}/$/GetHealth | Gets the health of the service fabric application.
*ApplicationApi* | [**get_application_health_using_policy**](docs/ApplicationApi.md#get_application_health_using_policy) | **POST** /Applications/{applicationId}/$/GetHealth | Gets the health of a Service Fabric application using the specified policy.
*ApplicationApi* | [**get_application_info**](docs/ApplicationApi.md#get_application_info) | **GET** /Applications/{applicationId} | Gets information about a Service Fabric application.
*ApplicationApi* | [**get_application_info_list**](docs/ApplicationApi.md#get_application_info_list) | **GET** /Applications | Gets the list of applications created in the Service Fabric cluster that match the specified filters.
*ApplicationApi* | [**get_application_load_info**](docs/ApplicationApi.md#get_application_load_info) | **GET** /Applications/{applicationId}/$/GetLoadInformation | Gets load information about a Service Fabric application.
*ApplicationApi* | [**get_application_upgrade**](docs/ApplicationApi.md#get_application_upgrade) | **GET** /Applications/{applicationId}/$/GetUpgradeProgress | Gets details for the latest upgrade performed on this application.
*ApplicationApi* | [**get_deployed_application_health**](docs/ApplicationApi.md#get_deployed_application_health) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetHealth | Gets the information about health of an application deployed on a Service Fabric node.
*ApplicationApi* | [**get_deployed_application_health_using_policy**](docs/ApplicationApi.md#get_deployed_application_health_using_policy) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetHealth | Gets the information about health of an application deployed on a Service Fabric node. using the specified policy.
*ApplicationApi* | [**get_deployed_application_info**](docs/ApplicationApi.md#get_deployed_application_info) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId} | Gets the information about an application deployed on a Service Fabric node.
*ApplicationApi* | [**get_deployed_application_info_list**](docs/ApplicationApi.md#get_deployed_application_info_list) | **GET** /Nodes/{nodeName}/$/GetApplications | Gets the list of applications deployed on a Service Fabric node.
*ApplicationApi* | [**report_application_health**](docs/ApplicationApi.md#report_application_health) | **POST** /Applications/{applicationId}/$/ReportHealth | Sends a health report on the Service Fabric application.
*ApplicationApi* | [**report_deployed_application_health**](docs/ApplicationApi.md#report_deployed_application_health) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/ReportHealth | Sends a health report on the Service Fabric application deployed on a Service Fabric node.
*ApplicationApi* | [**resume_application_upgrade**](docs/ApplicationApi.md#resume_application_upgrade) | **POST** /Applications/{applicationId}/$/MoveToNextUpgradeDomain | Resumes upgrading an application in the Service Fabric cluster.
*ApplicationApi* | [**rollback_application_upgrade**](docs/ApplicationApi.md#rollback_application_upgrade) | **POST** /Applications/{applicationId}/$/RollbackUpgrade | Starts rolling back the currently on-going upgrade of an application in the Service Fabric cluster.
*ApplicationApi* | [**start_application_upgrade**](docs/ApplicationApi.md#start_application_upgrade) | **POST** /Applications/{applicationId}/$/Upgrade | Starts upgrading an application in the Service Fabric cluster.
*ApplicationApi* | [**update_application_upgrade**](docs/ApplicationApi.md#update_application_upgrade) | **POST** /Applications/{applicationId}/$/UpdateUpgrade | Updates an ongoing application upgrade in the Service Fabric cluster.
*ApplicationTypeApi* | [**get_application_manifest**](docs/ApplicationTypeApi.md#get_application_manifest) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetApplicationManifest | Gets the manifest describing an application type.
*ApplicationTypeApi* | [**get_application_type_info_list**](docs/ApplicationTypeApi.md#get_application_type_info_list) | **GET** /ApplicationTypes | Gets the list of application types in the Service Fabric cluster.
*ApplicationTypeApi* | [**get_application_type_info_list_by_name**](docs/ApplicationTypeApi.md#get_application_type_info_list_by_name) | **GET** /ApplicationTypes/{applicationTypeName} | Gets the list of application types in the Service Fabric cluster matching exactly the specified name.
*ApplicationTypeApi* | [**provision_application_type**](docs/ApplicationTypeApi.md#provision_application_type) | **POST** /ApplicationTypes/$/Provision | Provisions or registers a Service Fabric application type with the cluster using the &#39;.sfpkg&#39; package in the external store or using the application package in the image store.
*ApplicationTypeApi* | [**unprovision_application_type**](docs/ApplicationTypeApi.md#unprovision_application_type) | **POST** /ApplicationTypes/{applicationTypeName}/$/Unprovision | Removes or unregisters a Service Fabric application type from the cluster.
*BackupRestoreApi* | [**backup_partition**](docs/BackupRestoreApi.md#backup_partition) | **POST** /Partitions/{partitionId}/$/Backup | Triggers backup of the partition&#39;s state.
*BackupRestoreApi* | [**create_backup_policy**](docs/BackupRestoreApi.md#create_backup_policy) | **POST** /BackupRestore/BackupPolicies/$/Create | Creates a backup policy.
*BackupRestoreApi* | [**delete_backup_policy**](docs/BackupRestoreApi.md#delete_backup_policy) | **POST** /BackupRestore/BackupPolicies/{backupPolicyName}/$/Delete | Deletes the backup policy.
*BackupRestoreApi* | [**disable_application_backup**](docs/BackupRestoreApi.md#disable_application_backup) | **POST** /Applications/{applicationId}/$/DisableBackup | Disables periodic backup of Service Fabric application.
*BackupRestoreApi* | [**disable_partition_backup**](docs/BackupRestoreApi.md#disable_partition_backup) | **POST** /Partitions/{partitionId}/$/DisableBackup | Disables periodic backup of Service Fabric partition which was previously enabled.
*BackupRestoreApi* | [**disable_service_backup**](docs/BackupRestoreApi.md#disable_service_backup) | **POST** /Services/{serviceId}/$/DisableBackup | Disables periodic backup of Service Fabric service which was previously enabled.
*BackupRestoreApi* | [**enable_application_backup**](docs/BackupRestoreApi.md#enable_application_backup) | **POST** /Applications/{applicationId}/$/EnableBackup | Enables periodic backup of stateful partitions under this Service Fabric application.
*BackupRestoreApi* | [**enable_partition_backup**](docs/BackupRestoreApi.md#enable_partition_backup) | **POST** /Partitions/{partitionId}/$/EnableBackup | Enables periodic backup of the stateful persisted partition.
*BackupRestoreApi* | [**enable_service_backup**](docs/BackupRestoreApi.md#enable_service_backup) | **POST** /Services/{serviceId}/$/EnableBackup | Enables periodic backup of stateful partitions under this Service Fabric service.
*BackupRestoreApi* | [**get_all_entities_backed_up_by_policy**](docs/BackupRestoreApi.md#get_all_entities_backed_up_by_policy) | **GET** /BackupRestore/BackupPolicies/{backupPolicyName}/$/GetBackupEnabledEntities | Gets the list of backup entities that are associated with this policy.
*BackupRestoreApi* | [**get_application_backup_configuration_info**](docs/BackupRestoreApi.md#get_application_backup_configuration_info) | **GET** /Applications/{applicationId}/$/GetBackupConfigurationInfo | Gets the Service Fabric application backup configuration information.
*BackupRestoreApi* | [**get_application_backup_list**](docs/BackupRestoreApi.md#get_application_backup_list) | **GET** /Applications/{applicationId}/$/GetBackups | Gets the list of backups available for every partition in this application.
*BackupRestoreApi* | [**get_backup_policy_by_name**](docs/BackupRestoreApi.md#get_backup_policy_by_name) | **GET** /BackupRestore/BackupPolicies/{backupPolicyName} | Gets a particular backup policy by name.
*BackupRestoreApi* | [**get_backup_policy_list**](docs/BackupRestoreApi.md#get_backup_policy_list) | **GET** /BackupRestore/BackupPolicies | Gets all the backup policies configured.
*BackupRestoreApi* | [**get_backups_from_backup_location**](docs/BackupRestoreApi.md#get_backups_from_backup_location) | **POST** /BackupRestore/$/GetBackups | Gets the list of backups available for the specified backed up entity at the specified backup location.
*BackupRestoreApi* | [**get_partition_backup_configuration_info**](docs/BackupRestoreApi.md#get_partition_backup_configuration_info) | **GET** /Partitions/{partitionId}/$/GetBackupConfigurationInfo | Gets the partition backup configuration information
*BackupRestoreApi* | [**get_partition_backup_list**](docs/BackupRestoreApi.md#get_partition_backup_list) | **GET** /Partitions/{partitionId}/$/GetBackups | Gets the list of backups available for the specified partition.
*BackupRestoreApi* | [**get_partition_backup_progress**](docs/BackupRestoreApi.md#get_partition_backup_progress) | **GET** /Partitions/{partitionId}/$/GetBackupProgress | Gets details for the latest backup triggered for this partition.
*BackupRestoreApi* | [**get_partition_restore_progress**](docs/BackupRestoreApi.md#get_partition_restore_progress) | **GET** /Partitions/{partitionId}/$/GetRestoreProgress | Gets details for the latest restore operation triggered for this partition.
*BackupRestoreApi* | [**get_service_backup_configuration_info**](docs/BackupRestoreApi.md#get_service_backup_configuration_info) | **GET** /Services/{serviceId}/$/GetBackupConfigurationInfo | Gets the Service Fabric service backup configuration information.
*BackupRestoreApi* | [**get_service_backup_list**](docs/BackupRestoreApi.md#get_service_backup_list) | **GET** /Services/{serviceId}/$/GetBackups | Gets the list of backups available for every partition in this service.
*BackupRestoreApi* | [**restore_partition**](docs/BackupRestoreApi.md#restore_partition) | **POST** /Partitions/{partitionId}/$/Restore | Triggers restore of the state of the partition using the specified restore partition description.
*BackupRestoreApi* | [**resume_application_backup**](docs/BackupRestoreApi.md#resume_application_backup) | **POST** /Applications/{applicationId}/$/ResumeBackup | Resumes periodic backup of a Service Fabric application which was previously suspended.
*BackupRestoreApi* | [**resume_partition_backup**](docs/BackupRestoreApi.md#resume_partition_backup) | **POST** /Partitions/{partitionId}/$/ResumeBackup | Resumes periodic backup of partition which was previously suspended.
*BackupRestoreApi* | [**resume_service_backup**](docs/BackupRestoreApi.md#resume_service_backup) | **POST** /Services/{serviceId}/$/ResumeBackup | Resumes periodic backup of a Service Fabric service which was previously suspended.
*BackupRestoreApi* | [**suspend_application_backup**](docs/BackupRestoreApi.md#suspend_application_backup) | **POST** /Applications/{applicationId}/$/SuspendBackup | Suspends periodic backup for the specified Service Fabric application.
*BackupRestoreApi* | [**suspend_partition_backup**](docs/BackupRestoreApi.md#suspend_partition_backup) | **POST** /Partitions/{partitionId}/$/SuspendBackup | Suspends periodic backup for the specified partition.
*BackupRestoreApi* | [**suspend_service_backup**](docs/BackupRestoreApi.md#suspend_service_backup) | **POST** /Services/{serviceId}/$/SuspendBackup | Suspends periodic backup for the specified Service Fabric service.
*BackupRestoreApi* | [**update_backup_policy**](docs/BackupRestoreApi.md#update_backup_policy) | **POST** /BackupRestore/BackupPolicies/{backupPolicyName}/$/Update | Updates the backup policy.
*ChaosApi* | [**get_chaos**](docs/ChaosApi.md#get_chaos) | **GET** /Tools/Chaos | Get the status of Chaos.
*ChaosApi* | [**get_chaos_events**](docs/ChaosApi.md#get_chaos_events) | **GET** /Tools/Chaos/Events | Gets the next segment of the Chaos events based on the continuation token or the time range.
*ChaosApi* | [**get_chaos_schedule**](docs/ChaosApi.md#get_chaos_schedule) | **GET** /Tools/Chaos/Schedule | Get the Chaos Schedule defining when and how to run Chaos.
*ChaosApi* | [**post_chaos_schedule**](docs/ChaosApi.md#post_chaos_schedule) | **POST** /Tools/Chaos/Schedule | Set the schedule used by Chaos.
*ChaosApi* | [**start_chaos**](docs/ChaosApi.md#start_chaos) | **POST** /Tools/Chaos/$/Start | Starts Chaos in the cluster.
*ChaosApi* | [**stop_chaos**](docs/ChaosApi.md#stop_chaos) | **POST** /Tools/Chaos/$/Stop | Stops Chaos if it is running in the cluster and put the Chaos Schedule in a stopped state.
*ClusterApi* | [**get_aad_metadata**](docs/ClusterApi.md#get_aad_metadata) | **GET** /$/GetAadMetadata | Gets the Azure Active Directory metadata used for secured connection to cluster.
*ClusterApi* | [**get_cluster_configuration**](docs/ClusterApi.md#get_cluster_configuration) | **GET** /$/GetClusterConfiguration | Get the Service Fabric standalone cluster configuration.
*ClusterApi* | [**get_cluster_configuration_upgrade_status**](docs/ClusterApi.md#get_cluster_configuration_upgrade_status) | **GET** /$/GetClusterConfigurationUpgradeStatus | Get the cluster configuration upgrade status of a Service Fabric standalone cluster.
*ClusterApi* | [**get_cluster_health**](docs/ClusterApi.md#get_cluster_health) | **GET** /$/GetClusterHealth | Gets the health of a Service Fabric cluster.
*ClusterApi* | [**get_cluster_health_chunk**](docs/ClusterApi.md#get_cluster_health_chunk) | **GET** /$/GetClusterHealthChunk | Gets the health of a Service Fabric cluster using health chunks.
*ClusterApi* | [**get_cluster_health_chunk_using_policy_and_advanced_filters**](docs/ClusterApi.md#get_cluster_health_chunk_using_policy_and_advanced_filters) | **POST** /$/GetClusterHealthChunk | Gets the health of a Service Fabric cluster using health chunks.
*ClusterApi* | [**get_cluster_health_using_policy**](docs/ClusterApi.md#get_cluster_health_using_policy) | **POST** /$/GetClusterHealth | Gets the health of a Service Fabric cluster using the specified policy.
*ClusterApi* | [**get_cluster_manifest**](docs/ClusterApi.md#get_cluster_manifest) | **GET** /$/GetClusterManifest | Get the Service Fabric cluster manifest.
*ClusterApi* | [**get_cluster_upgrade_progress**](docs/ClusterApi.md#get_cluster_upgrade_progress) | **GET** /$/GetUpgradeProgress | Gets the progress of the current cluster upgrade.
*ClusterApi* | [**get_provisioned_fabric_code_version_info_list**](docs/ClusterApi.md#get_provisioned_fabric_code_version_info_list) | **GET** /$/GetProvisionedCodeVersions | Gets a list of fabric code versions that are provisioned in a Service Fabric cluster.
*ClusterApi* | [**get_provisioned_fabric_config_version_info_list**](docs/ClusterApi.md#get_provisioned_fabric_config_version_info_list) | **GET** /$/GetProvisionedConfigVersions | Gets a list of fabric config versions that are provisioned in a Service Fabric cluster.
*ClusterApi* | [**get_upgrade_orchestration_service_state**](docs/ClusterApi.md#get_upgrade_orchestration_service_state) | **GET** /$/GetUpgradeOrchestrationServiceState | Get the service state of Service Fabric Upgrade Orchestration Service.
*ClusterApi* | [**provision_cluster**](docs/ClusterApi.md#provision_cluster) | **POST** /$/Provision | Provision the code or configuration packages of a Service Fabric cluster.
*ClusterApi* | [**report_cluster_health**](docs/ClusterApi.md#report_cluster_health) | **POST** /$/ReportClusterHealth | Sends a health report on the Service Fabric cluster.
*ClusterApi* | [**resume_cluster_upgrade**](docs/ClusterApi.md#resume_cluster_upgrade) | **POST** /$/MoveToNextUpgradeDomain | Make the cluster upgrade move on to the next upgrade domain.
*ClusterApi* | [**rollback_cluster_upgrade**](docs/ClusterApi.md#rollback_cluster_upgrade) | **POST** /$/RollbackUpgrade | Rollback the upgrade of a Service Fabric cluster.
*ClusterApi* | [**set_upgrade_orchestration_service_state**](docs/ClusterApi.md#set_upgrade_orchestration_service_state) | **POST** /$/SetUpgradeOrchestrationServiceState | Update the service state of Service Fabric Upgrade Orchestration Service.
*ClusterApi* | [**start_cluster_configuration_upgrade**](docs/ClusterApi.md#start_cluster_configuration_upgrade) | **POST** /$/StartClusterConfigurationUpgrade | Start upgrading the configuration of a Service Fabric standalone cluster.
*ClusterApi* | [**start_cluster_upgrade**](docs/ClusterApi.md#start_cluster_upgrade) | **POST** /$/Upgrade | Start upgrading the code or configuration version of a Service Fabric cluster.
*ClusterApi* | [**unprovision_cluster**](docs/ClusterApi.md#unprovision_cluster) | **POST** /$/Unprovision | Unprovision the code or configuration packages of a Service Fabric cluster.
*ClusterApi* | [**update_cluster_upgrade**](docs/ClusterApi.md#update_cluster_upgrade) | **POST** /$/UpdateUpgrade | Update the upgrade parameters of a Service Fabric cluster upgrade.
*CodePackageApi* | [**get_container_logs_deployed_on_node**](docs/CodePackageApi.md#get_container_logs_deployed_on_node) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/ContainerLogs | Gets the container logs for container deployed on a Service Fabric node.
*CodePackageApi* | [**get_deployed_code_package_info_list**](docs/CodePackageApi.md#get_deployed_code_package_info_list) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages | Gets the list of code packages deployed on a Service Fabric node.
*CodePackageApi* | [**invoke_container_api**](docs/CodePackageApi.md#invoke_container_api) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/ContainerApi | Invoke container API on a container deployed on a Service Fabric node.
*CodePackageApi* | [**restart_deployed_code_package**](docs/CodePackageApi.md#restart_deployed_code_package) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/Restart | Restarts a code package deployed on a Service Fabric node in a cluster.
*ComposeDeploymentApi* | [**create_compose_deployment**](docs/ComposeDeploymentApi.md#create_compose_deployment) | **PUT** /ComposeDeployments/$/Create | Creates a Service Fabric compose deployment.
*ComposeDeploymentApi* | [**get_compose_deployment_status**](docs/ComposeDeploymentApi.md#get_compose_deployment_status) | **GET** /ComposeDeployments/{deploymentName} | Gets information about a Service Fabric compose deployment.
*ComposeDeploymentApi* | [**get_compose_deployment_status_list**](docs/ComposeDeploymentApi.md#get_compose_deployment_status_list) | **GET** /ComposeDeployments | Gets the list of compose deployments created in the Service Fabric cluster.
*ComposeDeploymentApi* | [**get_compose_deployment_upgrade_progress**](docs/ComposeDeploymentApi.md#get_compose_deployment_upgrade_progress) | **GET** /ComposeDeployments/{deploymentName}/$/GetUpgradeProgress | Gets details for the latest upgrade performed on this Service Fabric compose deployment.
*ComposeDeploymentApi* | [**remove_compose_deployment**](docs/ComposeDeploymentApi.md#remove_compose_deployment) | **POST** /ComposeDeployments/{deploymentName}/$/Delete | Deletes an existing Service Fabric compose deployment from cluster.
*ComposeDeploymentApi* | [**start_compose_deployment_upgrade**](docs/ComposeDeploymentApi.md#start_compose_deployment_upgrade) | **POST** /ComposeDeployments/{deploymentName}/$/Upgrade | Starts upgrading a compose deployment in the Service Fabric cluster.
*EventsStoreApi* | [**get_application_event_list**](docs/EventsStoreApi.md#get_application_event_list) | **GET** /EventsStore/Applications/{applicationId}/$/Events | Gets an Application-related events.
*EventsStoreApi* | [**get_applications_event_list**](docs/EventsStoreApi.md#get_applications_event_list) | **GET** /EventsStore/Applications/Events | Gets all Applications-related events.
*EventsStoreApi* | [**get_cluster_event_list**](docs/EventsStoreApi.md#get_cluster_event_list) | **GET** /EventsStore/Cluster/Events | Gets all Cluster-related events.
*EventsStoreApi* | [**get_containers_event_list**](docs/EventsStoreApi.md#get_containers_event_list) | **GET** /EventsStore/Containers/Events | Gets all Containers-related events.
*EventsStoreApi* | [**get_correlated_event_list**](docs/EventsStoreApi.md#get_correlated_event_list) | **GET** /EventsStore/CorrelatedEvents/{eventInstanceId}/$/Events | Gets all correlated events for a given event.
*EventsStoreApi* | [**get_node_event_list**](docs/EventsStoreApi.md#get_node_event_list) | **GET** /EventsStore/Nodes/{nodeName}/$/Events | Gets a Node-related events.
*EventsStoreApi* | [**get_nodes_event_list**](docs/EventsStoreApi.md#get_nodes_event_list) | **GET** /EventsStore/Nodes/Events | Gets all Nodes-related Events.
*EventsStoreApi* | [**get_partition_event_list**](docs/EventsStoreApi.md#get_partition_event_list) | **GET** /EventsStore/Partitions/{partitionId}/$/Events | Gets a Partition-related events.
*EventsStoreApi* | [**get_partition_replica_event_list**](docs/EventsStoreApi.md#get_partition_replica_event_list) | **GET** /EventsStore/Partitions/{partitionId}/$/Replicas/{replicaId}/$/Events | Gets a Partition Replica-related events.
*EventsStoreApi* | [**get_partition_replicas_event_list**](docs/EventsStoreApi.md#get_partition_replicas_event_list) | **GET** /EventsStore/Partitions/{partitionId}/$/Replicas/Events | Gets all Replicas-related events for a Partition.
*EventsStoreApi* | [**get_partitions_event_list**](docs/EventsStoreApi.md#get_partitions_event_list) | **GET** /EventsStore/Partitions/Events | Gets all Partitions-related events.
*EventsStoreApi* | [**get_service_event_list**](docs/EventsStoreApi.md#get_service_event_list) | **GET** /EventsStore/Services/{serviceId}/$/Events | Gets a Service-related events.
*EventsStoreApi* | [**get_services_event_list**](docs/EventsStoreApi.md#get_services_event_list) | **GET** /EventsStore/Services/Events | Gets all Services-related events.
*FaultsApi* | [**cancel_operation**](docs/FaultsApi.md#cancel_operation) | **POST** /Faults/$/Cancel | Cancels a user-induced fault operation.
*FaultsApi* | [**get_data_loss_progress**](docs/FaultsApi.md#get_data_loss_progress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetDataLossProgress | Gets the progress of a partition data loss operation started using the StartDataLoss API.
*FaultsApi* | [**get_fault_operation_list**](docs/FaultsApi.md#get_fault_operation_list) | **GET** /Faults/ | Gets a list of user-induced fault operations filtered by provided input.
*FaultsApi* | [**get_node_transition_progress**](docs/FaultsApi.md#get_node_transition_progress) | **GET** /Faults/Nodes/{nodeName}/$/GetTransitionProgress | Gets the progress of an operation started using StartNodeTransition.
*FaultsApi* | [**get_partition_restart_progress**](docs/FaultsApi.md#get_partition_restart_progress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetRestartProgress | Gets the progress of a PartitionRestart operation started using StartPartitionRestart.
*FaultsApi* | [**get_quorum_loss_progress**](docs/FaultsApi.md#get_quorum_loss_progress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetQuorumLossProgress | Gets the progress of a quorum loss operation on a partition started using the StartQuorumLoss API.
*FaultsApi* | [**start_data_loss**](docs/FaultsApi.md#start_data_loss) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartDataLoss | This API will induce data loss for the specified partition. It will trigger a call to the OnDataLossAsync API of the partition.
*FaultsApi* | [**start_node_transition**](docs/FaultsApi.md#start_node_transition) | **POST** /Faults/Nodes/{nodeName}/$/StartTransition/ | Starts or stops a cluster node.
*FaultsApi* | [**start_partition_restart**](docs/FaultsApi.md#start_partition_restart) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartRestart | This API will restart some or all replicas or instances of the specified partition.
*FaultsApi* | [**start_quorum_loss**](docs/FaultsApi.md#start_quorum_loss) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartQuorumLoss | Induces quorum loss for a given stateful service partition.
*ImageStoreApi* | [**commit_image_store_upload_session**](docs/ImageStoreApi.md#commit_image_store_upload_session) | **POST** /ImageStore/$/CommitUploadSession | Commit an image store upload session.
*ImageStoreApi* | [**copy_image_store_content**](docs/ImageStoreApi.md#copy_image_store_content) | **POST** /ImageStore/$/Copy | Copies image store content internally
*ImageStoreApi* | [**delete_image_store_content**](docs/ImageStoreApi.md#delete_image_store_content) | **DELETE** /ImageStore/{contentPath} | Deletes existing image store content.
*ImageStoreApi* | [**delete_image_store_upload_session**](docs/ImageStoreApi.md#delete_image_store_upload_session) | **DELETE** /ImageStore/$/DeleteUploadSession | Cancels an image store upload session.
*ImageStoreApi* | [**get_image_store_content**](docs/ImageStoreApi.md#get_image_store_content) | **GET** /ImageStore/{contentPath} | Gets the image store content information.
*ImageStoreApi* | [**get_image_store_root_content**](docs/ImageStoreApi.md#get_image_store_root_content) | **GET** /ImageStore | Gets the content information at the root of the image store.
*ImageStoreApi* | [**get_image_store_upload_session_by_id**](docs/ImageStoreApi.md#get_image_store_upload_session_by_id) | **GET** /ImageStore/$/GetUploadSession | Get the image store upload session by ID.
*ImageStoreApi* | [**get_image_store_upload_session_by_path**](docs/ImageStoreApi.md#get_image_store_upload_session_by_path) | **GET** /ImageStore/{contentPath}/$/GetUploadSession | Get the image store upload session by relative path.
*ImageStoreApi* | [**upload_file**](docs/ImageStoreApi.md#upload_file) | **PUT** /ImageStore/{contentPath} | Uploads contents of the file to the image store.
*ImageStoreApi* | [**upload_file_chunk**](docs/ImageStoreApi.md#upload_file_chunk) | **PUT** /ImageStore/{contentPath}/$/UploadChunk | Uploads a file chunk to the image store relative path.
*InfrastructureApi* | [**invoke_infrastructure_command**](docs/InfrastructureApi.md#invoke_infrastructure_command) | **POST** /$/InvokeInfrastructureCommand | Invokes an administrative command on the given Infrastructure Service instance.
*InfrastructureApi* | [**invoke_infrastructure_query**](docs/InfrastructureApi.md#invoke_infrastructure_query) | **GET** /$/InvokeInfrastructureQuery | Invokes a read-only query on the given infrastructure service instance.
*NodeApi* | [**disable_node**](docs/NodeApi.md#disable_node) | **POST** /Nodes/{nodeName}/$/Deactivate | Deactivate a Service Fabric cluster node with the specified deactivation intent.
*NodeApi* | [**enable_node**](docs/NodeApi.md#enable_node) | **POST** /Nodes/{nodeName}/$/Activate | Activate a Service Fabric cluster node which is currently deactivated.
*NodeApi* | [**get_node_health**](docs/NodeApi.md#get_node_health) | **GET** /Nodes/{nodeName}/$/GetHealth | Gets the health of a Service Fabric node.
*NodeApi* | [**get_node_health_using_policy**](docs/NodeApi.md#get_node_health_using_policy) | **POST** /Nodes/{nodeName}/$/GetHealth | Gets the health of a Service Fabric node, by using the specified health policy.
*NodeApi* | [**get_node_info**](docs/NodeApi.md#get_node_info) | **GET** /Nodes/{nodeName} | Gets the information about a specific node in the Service Fabric cluster.
*NodeApi* | [**get_node_info_list**](docs/NodeApi.md#get_node_info_list) | **GET** /Nodes | Gets the list of nodes in the Service Fabric cluster.
*NodeApi* | [**get_node_load_info**](docs/NodeApi.md#get_node_load_info) | **GET** /Nodes/{nodeName}/$/GetLoadInformation | Gets the load information of a Service Fabric node.
*NodeApi* | [**remove_node_state**](docs/NodeApi.md#remove_node_state) | **POST** /Nodes/{nodeName}/$/RemoveNodeState | Notifies Service Fabric that the persisted state on a node has been permanently removed or lost.
*NodeApi* | [**report_node_health**](docs/NodeApi.md#report_node_health) | **POST** /Nodes/{nodeName}/$/ReportHealth | Sends a health report on the Service Fabric node.
*NodeApi* | [**restart_node**](docs/NodeApi.md#restart_node) | **POST** /Nodes/{nodeName}/$/Restart | Restarts a Service Fabric cluster node.
*PartitionApi* | [**get_partition_health**](docs/PartitionApi.md#get_partition_health) | **GET** /Partitions/{partitionId}/$/GetHealth | Gets the health of the specified Service Fabric partition.
*PartitionApi* | [**get_partition_health_using_policy**](docs/PartitionApi.md#get_partition_health_using_policy) | **POST** /Partitions/{partitionId}/$/GetHealth | Gets the health of the specified Service Fabric partition, by using the specified health policy.
*PartitionApi* | [**get_partition_info**](docs/PartitionApi.md#get_partition_info) | **GET** /Partitions/{partitionId} | Gets the information about a Service Fabric partition.
*PartitionApi* | [**get_partition_info_list**](docs/PartitionApi.md#get_partition_info_list) | **GET** /Services/{serviceId}/$/GetPartitions | Gets the list of partitions of a Service Fabric service.
*PartitionApi* | [**get_partition_load_information**](docs/PartitionApi.md#get_partition_load_information) | **GET** /Partitions/{partitionId}/$/GetLoadInformation | Gets the load information of the specified Service Fabric partition.
*PartitionApi* | [**get_service_name_info**](docs/PartitionApi.md#get_service_name_info) | **GET** /Partitions/{partitionId}/$/GetServiceName | Gets the name of the Service Fabric service for a partition.
*PartitionApi* | [**recover_all_partitions**](docs/PartitionApi.md#recover_all_partitions) | **POST** /$/RecoverAllPartitions | Indicates to the Service Fabric cluster that it should attempt to recover any services (including system services) which are currently stuck in quorum loss.
*PartitionApi* | [**recover_partition**](docs/PartitionApi.md#recover_partition) | **POST** /Partitions/{partitionId}/$/Recover | Indicates to the Service Fabric cluster that it should attempt to recover a specific partition which is currently stuck in quorum loss.
*PartitionApi* | [**recover_service_partitions**](docs/PartitionApi.md#recover_service_partitions) | **POST** /Services/$/{serviceId}/$/GetPartitions/$/Recover | Indicates to the Service Fabric cluster that it should attempt to recover the specified service which is currently stuck in quorum loss.
*PartitionApi* | [**recover_system_partitions**](docs/PartitionApi.md#recover_system_partitions) | **POST** /$/RecoverSystemPartitions | Indicates to the Service Fabric cluster that it should attempt to recover the system services which are currently stuck in quorum loss.
*PartitionApi* | [**report_partition_health**](docs/PartitionApi.md#report_partition_health) | **POST** /Partitions/{partitionId}/$/ReportHealth | Sends a health report on the Service Fabric partition.
*PartitionApi* | [**reset_partition_load**](docs/PartitionApi.md#reset_partition_load) | **POST** /Partitions/{partitionId}/$/ResetLoad | Resets the current load of a Service Fabric partition.
*PropertyManagementApi* | [**create_name**](docs/PropertyManagementApi.md#create_name) | **POST** /Names/$/Create | Creates a Service Fabric name.
*PropertyManagementApi* | [**delete_name**](docs/PropertyManagementApi.md#delete_name) | **DELETE** /Names/{nameId} | Deletes a Service Fabric name.
*PropertyManagementApi* | [**delete_property**](docs/PropertyManagementApi.md#delete_property) | **DELETE** /Names/{nameId}/$/GetProperty | Deletes the specified Service Fabric property.
*PropertyManagementApi* | [**get_name_exists_info**](docs/PropertyManagementApi.md#get_name_exists_info) | **GET** /Names/{nameId} | Returns whether the Service Fabric name exists.
*PropertyManagementApi* | [**get_property_info**](docs/PropertyManagementApi.md#get_property_info) | **GET** /Names/{nameId}/$/GetProperty | Gets the specified Service Fabric property.
*PropertyManagementApi* | [**get_property_info_list**](docs/PropertyManagementApi.md#get_property_info_list) | **GET** /Names/{nameId}/$/GetProperties | Gets information on all Service Fabric properties under a given name.
*PropertyManagementApi* | [**get_sub_name_info_list**](docs/PropertyManagementApi.md#get_sub_name_info_list) | **GET** /Names/{nameId}/$/GetSubNames | Enumerates all the Service Fabric names under a given name.
*PropertyManagementApi* | [**put_property**](docs/PropertyManagementApi.md#put_property) | **PUT** /Names/{nameId}/$/GetProperty | Creates or updates a Service Fabric property.
*PropertyManagementApi* | [**submit_property_batch**](docs/PropertyManagementApi.md#submit_property_batch) | **POST** /Names/{nameId}/$/GetProperties/$/SubmitBatch | Submits a property batch.
*RepairManagementApi* | [**cancel_repair_task**](docs/RepairManagementApi.md#cancel_repair_task) | **POST** /$/CancelRepairTask | Requests the cancellation of the given repair task.
*RepairManagementApi* | [**create_repair_task**](docs/RepairManagementApi.md#create_repair_task) | **POST** /$/CreateRepairTask | Creates a new repair task.
*RepairManagementApi* | [**delete_repair_task**](docs/RepairManagementApi.md#delete_repair_task) | **POST** /$/DeleteRepairTask | Deletes a completed repair task.
*RepairManagementApi* | [**force_approve_repair_task**](docs/RepairManagementApi.md#force_approve_repair_task) | **POST** /$/ForceApproveRepairTask | Forces the approval of the given repair task.
*RepairManagementApi* | [**get_repair_task_list**](docs/RepairManagementApi.md#get_repair_task_list) | **GET** /$/GetRepairTaskList | Gets a list of repair tasks matching the given filters.
*RepairManagementApi* | [**update_repair_execution_state**](docs/RepairManagementApi.md#update_repair_execution_state) | **POST** /$/UpdateRepairExecutionState | Updates the execution state of a repair task.
*RepairManagementApi* | [**update_repair_task_health_policy**](docs/RepairManagementApi.md#update_repair_task_health_policy) | **POST** /$/UpdateRepairTaskHealthPolicy | Updates the health policy of the given repair task.
*ReplicaApi* | [**get_deployed_service_replica_detail_info**](docs/ReplicaApi.md#get_deployed_service_replica_detail_info) | **GET** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetDetail | Gets the details of replica deployed on a Service Fabric node.
*ReplicaApi* | [**get_deployed_service_replica_detail_info_by_partition_id**](docs/ReplicaApi.md#get_deployed_service_replica_detail_info_by_partition_id) | **GET** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas | Gets the details of replica deployed on a Service Fabric node.
*ReplicaApi* | [**get_deployed_service_replica_info_list**](docs/ReplicaApi.md#get_deployed_service_replica_info_list) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetReplicas | Gets the list of replicas deployed on a Service Fabric node.
*ReplicaApi* | [**get_replica_health**](docs/ReplicaApi.md#get_replica_health) | **GET** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetHealth | Gets the health of a Service Fabric stateful service replica or stateless service instance.
*ReplicaApi* | [**get_replica_health_using_policy**](docs/ReplicaApi.md#get_replica_health_using_policy) | **POST** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetHealth | Gets the health of a Service Fabric stateful service replica or stateless service instance using the specified policy.
*ReplicaApi* | [**get_replica_info**](docs/ReplicaApi.md#get_replica_info) | **GET** /Partitions/{partitionId}/$/GetReplicas/{replicaId} | Gets the information about a replica of a Service Fabric partition.
*ReplicaApi* | [**get_replica_info_list**](docs/ReplicaApi.md#get_replica_info_list) | **GET** /Partitions/{partitionId}/$/GetReplicas | Gets the information about replicas of a Service Fabric service partition.
*ReplicaApi* | [**remove_replica**](docs/ReplicaApi.md#remove_replica) | **POST** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/Delete | Removes a service replica running on a node.
*ReplicaApi* | [**report_replica_health**](docs/ReplicaApi.md#report_replica_health) | **POST** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/ReportHealth | Sends a health report on the Service Fabric replica.
*ReplicaApi* | [**restart_replica**](docs/ReplicaApi.md#restart_replica) | **POST** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/Restart | Restarts a service replica of a persisted service running on a node.
*ServiceApi* | [**create_service**](docs/ServiceApi.md#create_service) | **POST** /Applications/{applicationId}/$/GetServices/$/Create | Creates the specified Service Fabric service.
*ServiceApi* | [**create_service_from_template**](docs/ServiceApi.md#create_service_from_template) | **POST** /Applications/{applicationId}/$/GetServices/$/CreateFromTemplate | Creates a Service Fabric service from the service template.
*ServiceApi* | [**delete_service**](docs/ServiceApi.md#delete_service) | **POST** /Services/{serviceId}/$/Delete | Deletes an existing Service Fabric service.
*ServiceApi* | [**get_application_name_info**](docs/ServiceApi.md#get_application_name_info) | **GET** /Services/{serviceId}/$/GetApplicationName | Gets the name of the Service Fabric application for a service.
*ServiceApi* | [**get_service_description**](docs/ServiceApi.md#get_service_description) | **GET** /Services/{serviceId}/$/GetDescription | Gets the description of an existing Service Fabric service.
*ServiceApi* | [**get_service_health**](docs/ServiceApi.md#get_service_health) | **GET** /Services/{serviceId}/$/GetHealth | Gets the health of the specified Service Fabric service.
*ServiceApi* | [**get_service_health_using_policy**](docs/ServiceApi.md#get_service_health_using_policy) | **POST** /Services/{serviceId}/$/GetHealth | Gets the health of the specified Service Fabric service, by using the specified health policy.
*ServiceApi* | [**get_service_info**](docs/ServiceApi.md#get_service_info) | **GET** /Applications/{applicationId}/$/GetServices/{serviceId} | Gets the information about the specific service belonging to the Service Fabric application.
*ServiceApi* | [**get_service_info_list**](docs/ServiceApi.md#get_service_info_list) | **GET** /Applications/{applicationId}/$/GetServices | Gets the information about all services belonging to the application specified by the application id.
*ServiceApi* | [**report_service_health**](docs/ServiceApi.md#report_service_health) | **POST** /Services/{serviceId}/$/ReportHealth | Sends a health report on the Service Fabric service.
*ServiceApi* | [**resolve_service**](docs/ServiceApi.md#resolve_service) | **GET** /Services/{serviceId}/$/ResolvePartition | Resolve a Service Fabric partition.
*ServiceApi* | [**update_service**](docs/ServiceApi.md#update_service) | **POST** /Services/{serviceId}/$/Update | Updates a Service Fabric service using the specified update description.
*ServiceTypeApi* | [**get_deployed_service_type_info_by_name**](docs/ServiceTypeApi.md#get_deployed_service_type_info_by_name) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServiceTypes/{serviceTypeName} | Gets the information about a specified service type of the application deployed on a node in a Service Fabric cluster.
*ServiceTypeApi* | [**get_deployed_service_type_info_list**](docs/ServiceTypeApi.md#get_deployed_service_type_info_list) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServiceTypes | Gets the list containing the information about service types from the applications deployed on a node in a Service Fabric cluster.
*ServiceTypeApi* | [**get_service_manifest**](docs/ServiceTypeApi.md#get_service_manifest) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceManifest | Gets the manifest describing a service type.
*ServiceTypeApi* | [**get_service_type_info_by_name**](docs/ServiceTypeApi.md#get_service_type_info_by_name) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceTypes/{serviceTypeName} | Gets the information about a specific service type that is supported by a provisioned application type in a Service Fabric cluster.
*ServiceTypeApi* | [**get_service_type_info_list**](docs/ServiceTypeApi.md#get_service_type_info_list) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceTypes | Gets the list containing the information about service types that are supported by a provisioned application type in a Service Fabric cluster.
*ServicePackageApi* | [**deploy_service_package_to_node**](docs/ServicePackageApi.md#deploy_service_package_to_node) | **POST** /Nodes/{nodeName}/$/DeployServicePackage | Downloads all of the code packages associated with specified service manifest on the specified node.
*ServicePackageApi* | [**get_deployed_service_package_health**](docs/ServicePackageApi.md#get_deployed_service_package_health) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/GetHealth | Gets the information about health of an service package for a specific application deployed for a Service Fabric node and application.
*ServicePackageApi* | [**get_deployed_service_package_health_using_policy**](docs/ServicePackageApi.md#get_deployed_service_package_health_using_policy) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/GetHealth | Gets the information about health of service package for a specific application deployed on a Service Fabric node using the specified policy.
*ServicePackageApi* | [**get_deployed_service_package_info_list**](docs/ServicePackageApi.md#get_deployed_service_package_info_list) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages | Gets the list of service packages deployed on a Service Fabric node.
*ServicePackageApi* | [**get_deployed_service_package_info_list_by_name**](docs/ServicePackageApi.md#get_deployed_service_package_info_list_by_name) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName} | Gets the list of service packages deployed on a Service Fabric node matching exactly the specified name.
*ServicePackageApi* | [**report_deployed_service_package_health**](docs/ServicePackageApi.md#report_deployed_service_package_health) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/ReportHealth | Sends a health report on the Service Fabric deployed service package.


## Documentation For Models

 - [AadMetadata](docs/AadMetadata.md)
 - [AadMetadataObject](docs/AadMetadataObject.md)
 - [AddRemoveIncrementalNamedPartitionScalingMechanism](docs/AddRemoveIncrementalNamedPartitionScalingMechanism.md)
 - [AnalysisEventMetadata](docs/AnalysisEventMetadata.md)
 - [ApplicationBackupConfigurationInfo](docs/ApplicationBackupConfigurationInfo.md)
 - [ApplicationBackupEntity](docs/ApplicationBackupEntity.md)
 - [ApplicationCapacityDescription](docs/ApplicationCapacityDescription.md)
 - [ApplicationCreatedEvent](docs/ApplicationCreatedEvent.md)
 - [ApplicationDefinitionKind](docs/ApplicationDefinitionKind.md)
 - [ApplicationDeletedEvent](docs/ApplicationDeletedEvent.md)
 - [ApplicationDescription](docs/ApplicationDescription.md)
 - [ApplicationEvent](docs/ApplicationEvent.md)
 - [ApplicationHealth](docs/ApplicationHealth.md)
 - [ApplicationHealthEvaluation](docs/ApplicationHealthEvaluation.md)
 - [ApplicationHealthPolicies](docs/ApplicationHealthPolicies.md)
 - [ApplicationHealthPolicy](docs/ApplicationHealthPolicy.md)
 - [ApplicationHealthPolicyMapItem](docs/ApplicationHealthPolicyMapItem.md)
 - [ApplicationHealthReportCreatedEvent](docs/ApplicationHealthReportCreatedEvent.md)
 - [ApplicationHealthReportExpiredEvent](docs/ApplicationHealthReportExpiredEvent.md)
 - [ApplicationHealthState](docs/ApplicationHealthState.md)
 - [ApplicationHealthStateChunk](docs/ApplicationHealthStateChunk.md)
 - [ApplicationHealthStateChunkList](docs/ApplicationHealthStateChunkList.md)
 - [ApplicationHealthStateFilter](docs/ApplicationHealthStateFilter.md)
 - [ApplicationInfo](docs/ApplicationInfo.md)
 - [ApplicationLoadInfo](docs/ApplicationLoadInfo.md)
 - [ApplicationMetricDescription](docs/ApplicationMetricDescription.md)
 - [ApplicationNameInfo](docs/ApplicationNameInfo.md)
 - [ApplicationPackageCleanupPolicy](docs/ApplicationPackageCleanupPolicy.md)
 - [ApplicationParameter](docs/ApplicationParameter.md)
 - [ApplicationStatus](docs/ApplicationStatus.md)
 - [ApplicationTypeApplicationsHealthEvaluation](docs/ApplicationTypeApplicationsHealthEvaluation.md)
 - [ApplicationTypeDefinitionKind](docs/ApplicationTypeDefinitionKind.md)
 - [ApplicationTypeHealthPolicyMapItem](docs/ApplicationTypeHealthPolicyMapItem.md)
 - [ApplicationTypeImageStorePath](docs/ApplicationTypeImageStorePath.md)
 - [ApplicationTypeInfo](docs/ApplicationTypeInfo.md)
 - [ApplicationTypeManifest](docs/ApplicationTypeManifest.md)
 - [ApplicationTypeStatus](docs/ApplicationTypeStatus.md)
 - [ApplicationUpgradeCompleteEvent](docs/ApplicationUpgradeCompleteEvent.md)
 - [ApplicationUpgradeDescription](docs/ApplicationUpgradeDescription.md)
 - [ApplicationUpgradeDomainCompleteEvent](docs/ApplicationUpgradeDomainCompleteEvent.md)
 - [ApplicationUpgradeProgressInfo](docs/ApplicationUpgradeProgressInfo.md)
 - [ApplicationUpgradeRollbackCompleteEvent](docs/ApplicationUpgradeRollbackCompleteEvent.md)
 - [ApplicationUpgradeRollbackStartEvent](docs/ApplicationUpgradeRollbackStartEvent.md)
 - [ApplicationUpgradeStartEvent](docs/ApplicationUpgradeStartEvent.md)
 - [ApplicationUpgradeUpdateDescription](docs/ApplicationUpgradeUpdateDescription.md)
 - [ApplicationsHealthEvaluation](docs/ApplicationsHealthEvaluation.md)
 - [AveragePartitionLoadScalingTrigger](docs/AveragePartitionLoadScalingTrigger.md)
 - [AverageServiceLoadScalingTrigger](docs/AverageServiceLoadScalingTrigger.md)
 - [AzureBlobBackupStorageDescription](docs/AzureBlobBackupStorageDescription.md)
 - [BackupConfigurationInfo](docs/BackupConfigurationInfo.md)
 - [BackupEntity](docs/BackupEntity.md)
 - [BackupEntityKind](docs/BackupEntityKind.md)
 - [BackupEpoch](docs/BackupEpoch.md)
 - [BackupInfo](docs/BackupInfo.md)
 - [BackupPartitionDescription](docs/BackupPartitionDescription.md)
 - [BackupPolicyDescription](docs/BackupPolicyDescription.md)
 - [BackupPolicyScope](docs/BackupPolicyScope.md)
 - [BackupProgressInfo](docs/BackupProgressInfo.md)
 - [BackupScheduleDescription](docs/BackupScheduleDescription.md)
 - [BackupScheduleFrequencyType](docs/BackupScheduleFrequencyType.md)
 - [BackupScheduleKind](docs/BackupScheduleKind.md)
 - [BackupState](docs/BackupState.md)
 - [BackupStorageDescription](docs/BackupStorageDescription.md)
 - [BackupStorageKind](docs/BackupStorageKind.md)
 - [BackupSuspensionInfo](docs/BackupSuspensionInfo.md)
 - [BackupSuspensionScope](docs/BackupSuspensionScope.md)
 - [BackupType](docs/BackupType.md)
 - [BinaryPropertyValue](docs/BinaryPropertyValue.md)
 - [Chaos](docs/Chaos.md)
 - [ChaosContext](docs/ChaosContext.md)
 - [ChaosEvent](docs/ChaosEvent.md)
 - [ChaosEventKind](docs/ChaosEventKind.md)
 - [ChaosEventWrapper](docs/ChaosEventWrapper.md)
 - [ChaosEventsSegment](docs/ChaosEventsSegment.md)
 - [ChaosMovePrimaryFaultScheduledEvent](docs/ChaosMovePrimaryFaultScheduledEvent.md)
 - [ChaosMoveSecondaryFaultScheduledEvent](docs/ChaosMoveSecondaryFaultScheduledEvent.md)
 - [ChaosParameters](docs/ChaosParameters.md)
 - [ChaosParametersDictionaryItem](docs/ChaosParametersDictionaryItem.md)
 - [ChaosRemoveReplicaFaultCompletedEvent](docs/ChaosRemoveReplicaFaultCompletedEvent.md)
 - [ChaosRemoveReplicaFaultScheduledEvent](docs/ChaosRemoveReplicaFaultScheduledEvent.md)
 - [ChaosRestartCodePackageFaultCompletedEvent](docs/ChaosRestartCodePackageFaultCompletedEvent.md)
 - [ChaosRestartCodePackageFaultScheduledEvent](docs/ChaosRestartCodePackageFaultScheduledEvent.md)
 - [ChaosRestartNodeFaultCompletedEvent](docs/ChaosRestartNodeFaultCompletedEvent.md)
 - [ChaosRestartNodeFaultScheduledEvent](docs/ChaosRestartNodeFaultScheduledEvent.md)
 - [ChaosRestartReplicaFaultScheduledEvent](docs/ChaosRestartReplicaFaultScheduledEvent.md)
 - [ChaosSchedule](docs/ChaosSchedule.md)
 - [ChaosScheduleDescription](docs/ChaosScheduleDescription.md)
 - [ChaosScheduleJob](docs/ChaosScheduleJob.md)
 - [ChaosScheduleJobActiveDaysOfWeek](docs/ChaosScheduleJobActiveDaysOfWeek.md)
 - [ChaosScheduleStatus](docs/ChaosScheduleStatus.md)
 - [ChaosStartedEvent](docs/ChaosStartedEvent.md)
 - [ChaosStatus](docs/ChaosStatus.md)
 - [ChaosStoppedEvent](docs/ChaosStoppedEvent.md)
 - [ChaosTargetFilter](docs/ChaosTargetFilter.md)
 - [CheckExistsPropertyBatchOperation](docs/CheckExistsPropertyBatchOperation.md)
 - [CheckSequencePropertyBatchOperation](docs/CheckSequencePropertyBatchOperation.md)
 - [CheckValuePropertyBatchOperation](docs/CheckValuePropertyBatchOperation.md)
 - [ClusterConfiguration](docs/ClusterConfiguration.md)
 - [ClusterConfigurationUpgradeDescription](docs/ClusterConfigurationUpgradeDescription.md)
 - [ClusterConfigurationUpgradeStatusInfo](docs/ClusterConfigurationUpgradeStatusInfo.md)
 - [ClusterEvent](docs/ClusterEvent.md)
 - [ClusterHealth](docs/ClusterHealth.md)
 - [ClusterHealthChunk](docs/ClusterHealthChunk.md)
 - [ClusterHealthChunkQueryDescription](docs/ClusterHealthChunkQueryDescription.md)
 - [ClusterHealthPolicies](docs/ClusterHealthPolicies.md)
 - [ClusterHealthPolicy](docs/ClusterHealthPolicy.md)
 - [ClusterHealthReportCreatedEvent](docs/ClusterHealthReportCreatedEvent.md)
 - [ClusterHealthReportExpiredEvent](docs/ClusterHealthReportExpiredEvent.md)
 - [ClusterManifest](docs/ClusterManifest.md)
 - [ClusterUpgradeCompleteEvent](docs/ClusterUpgradeCompleteEvent.md)
 - [ClusterUpgradeDescriptionObject](docs/ClusterUpgradeDescriptionObject.md)
 - [ClusterUpgradeDomainCompleteEvent](docs/ClusterUpgradeDomainCompleteEvent.md)
 - [ClusterUpgradeHealthPolicyObject](docs/ClusterUpgradeHealthPolicyObject.md)
 - [ClusterUpgradeProgressObject](docs/ClusterUpgradeProgressObject.md)
 - [ClusterUpgradeRollbackCompleteEvent](docs/ClusterUpgradeRollbackCompleteEvent.md)
 - [ClusterUpgradeRollbackStartEvent](docs/ClusterUpgradeRollbackStartEvent.md)
 - [ClusterUpgradeStartEvent](docs/ClusterUpgradeStartEvent.md)
 - [CodePackageEntryPoint](docs/CodePackageEntryPoint.md)
 - [CodePackageEntryPointStatistics](docs/CodePackageEntryPointStatistics.md)
 - [ComposeDeploymentStatus](docs/ComposeDeploymentStatus.md)
 - [ComposeDeploymentStatusInfo](docs/ComposeDeploymentStatusInfo.md)
 - [ComposeDeploymentUpgradeDescription](docs/ComposeDeploymentUpgradeDescription.md)
 - [ComposeDeploymentUpgradeProgressInfo](docs/ComposeDeploymentUpgradeProgressInfo.md)
 - [ComposeDeploymentUpgradeState](docs/ComposeDeploymentUpgradeState.md)
 - [ContainerApiRequestBody](docs/ContainerApiRequestBody.md)
 - [ContainerApiResponse](docs/ContainerApiResponse.md)
 - [ContainerApiResult](docs/ContainerApiResult.md)
 - [ContainerDeactivatedEvent](docs/ContainerDeactivatedEvent.md)
 - [ContainerInstanceEvent](docs/ContainerInstanceEvent.md)
 - [ContainerLogs](docs/ContainerLogs.md)
 - [CreateComposeDeploymentDescription](docs/CreateComposeDeploymentDescription.md)
 - [CurrentUpgradeDomainProgressInfo](docs/CurrentUpgradeDomainProgressInfo.md)
 - [DayOfWeek](docs/DayOfWeek.md)
 - [DeactivationIntentDescription](docs/DeactivationIntentDescription.md)
 - [DeletePropertyBatchOperation](docs/DeletePropertyBatchOperation.md)
 - [DeltaNodesCheckHealthEvaluation](docs/DeltaNodesCheckHealthEvaluation.md)
 - [DeployServicePackageToNodeDescription](docs/DeployServicePackageToNodeDescription.md)
 - [DeployedApplicationHealth](docs/DeployedApplicationHealth.md)
 - [DeployedApplicationHealthEvaluation](docs/DeployedApplicationHealthEvaluation.md)
 - [DeployedApplicationHealthReportCreatedEvent](docs/DeployedApplicationHealthReportCreatedEvent.md)
 - [DeployedApplicationHealthReportExpiredEvent](docs/DeployedApplicationHealthReportExpiredEvent.md)
 - [DeployedApplicationHealthState](docs/DeployedApplicationHealthState.md)
 - [DeployedApplicationHealthStateChunk](docs/DeployedApplicationHealthStateChunk.md)
 - [DeployedApplicationHealthStateChunkList](docs/DeployedApplicationHealthStateChunkList.md)
 - [DeployedApplicationHealthStateFilter](docs/DeployedApplicationHealthStateFilter.md)
 - [DeployedApplicationInfo](docs/DeployedApplicationInfo.md)
 - [DeployedApplicationStatus](docs/DeployedApplicationStatus.md)
 - [DeployedApplicationsHealthEvaluation](docs/DeployedApplicationsHealthEvaluation.md)
 - [DeployedCodePackageInfo](docs/DeployedCodePackageInfo.md)
 - [DeployedServiceHealthReportCreatedEvent](docs/DeployedServiceHealthReportCreatedEvent.md)
 - [DeployedServiceHealthReportExpiredEvent](docs/DeployedServiceHealthReportExpiredEvent.md)
 - [DeployedServicePackageHealth](docs/DeployedServicePackageHealth.md)
 - [DeployedServicePackageHealthEvaluation](docs/DeployedServicePackageHealthEvaluation.md)
 - [DeployedServicePackageHealthState](docs/DeployedServicePackageHealthState.md)
 - [DeployedServicePackageHealthStateChunk](docs/DeployedServicePackageHealthStateChunk.md)
 - [DeployedServicePackageHealthStateChunkList](docs/DeployedServicePackageHealthStateChunkList.md)
 - [DeployedServicePackageHealthStateFilter](docs/DeployedServicePackageHealthStateFilter.md)
 - [DeployedServicePackageInfo](docs/DeployedServicePackageInfo.md)
 - [DeployedServicePackagesHealthEvaluation](docs/DeployedServicePackagesHealthEvaluation.md)
 - [DeployedServiceReplicaDetailInfo](docs/DeployedServiceReplicaDetailInfo.md)
 - [DeployedServiceReplicaInfo](docs/DeployedServiceReplicaInfo.md)
 - [DeployedServiceTypeInfo](docs/DeployedServiceTypeInfo.md)
 - [DeployedStatefulServiceReplicaDetailInfo](docs/DeployedStatefulServiceReplicaDetailInfo.md)
 - [DeployedStatefulServiceReplicaInfo](docs/DeployedStatefulServiceReplicaInfo.md)
 - [DeployedStatelessServiceInstanceDetailInfo](docs/DeployedStatelessServiceInstanceDetailInfo.md)
 - [DeployedStatelessServiceInstanceInfo](docs/DeployedStatelessServiceInstanceInfo.md)
 - [DeploymentStatus](docs/DeploymentStatus.md)
 - [DoublePropertyValue](docs/DoublePropertyValue.md)
 - [EnableBackupDescription](docs/EnableBackupDescription.md)
 - [EnsureAvailabilitySafetyCheck](docs/EnsureAvailabilitySafetyCheck.md)
 - [EnsurePartitionQurumSafetyCheck](docs/EnsurePartitionQurumSafetyCheck.md)
 - [EntityHealth](docs/EntityHealth.md)
 - [EntityHealthState](docs/EntityHealthState.md)
 - [EntityHealthStateChunk](docs/EntityHealthStateChunk.md)
 - [EntityHealthStateChunkList](docs/EntityHealthStateChunkList.md)
 - [EntityKind](docs/EntityKind.md)
 - [EntityKindHealthStateCount](docs/EntityKindHealthStateCount.md)
 - [EntryPointStatus](docs/EntryPointStatus.md)
 - [Epoch](docs/Epoch.md)
 - [EventHealthEvaluation](docs/EventHealthEvaluation.md)
 - [ExecutingFaultsChaosEvent](docs/ExecutingFaultsChaosEvent.md)
 - [ExternalStoreProvisionApplicationTypeDescription](docs/ExternalStoreProvisionApplicationTypeDescription.md)
 - [FabricCodeVersionInfo](docs/FabricCodeVersionInfo.md)
 - [FabricConfigVersionInfo](docs/FabricConfigVersionInfo.md)
 - [FabricError](docs/FabricError.md)
 - [FabricErrorCodes](docs/FabricErrorCodes.md)
 - [FabricErrorError](docs/FabricErrorError.md)
 - [FabricEvent](docs/FabricEvent.md)
 - [FabricEventKind](docs/FabricEventKind.md)
 - [FabricReplicaStatus](docs/FabricReplicaStatus.md)
 - [FailedPropertyBatchInfo](docs/FailedPropertyBatchInfo.md)
 - [FailedUpgradeDomainProgressObject](docs/FailedUpgradeDomainProgressObject.md)
 - [FailureAction](docs/FailureAction.md)
 - [FailureReason](docs/FailureReason.md)
 - [FailureUpgradeDomainProgressInfo](docs/FailureUpgradeDomainProgressInfo.md)
 - [FileInfo](docs/FileInfo.md)
 - [FileShareBackupStorageDescription](docs/FileShareBackupStorageDescription.md)
 - [FileVersion](docs/FileVersion.md)
 - [FolderInfo](docs/FolderInfo.md)
 - [FrequencyBasedBackupScheduleDescription](docs/FrequencyBasedBackupScheduleDescription.md)
 - [GetBackupByStorageQueryDescription](docs/GetBackupByStorageQueryDescription.md)
 - [GetPropertyBatchOperation](docs/GetPropertyBatchOperation.md)
 - [GuidPropertyValue](docs/GuidPropertyValue.md)
 - [HealthEvaluation](docs/HealthEvaluation.md)
 - [HealthEvaluationKind](docs/HealthEvaluationKind.md)
 - [HealthEvaluationWrapper](docs/HealthEvaluationWrapper.md)
 - [HealthEvent](docs/HealthEvent.md)
 - [HealthInformation](docs/HealthInformation.md)
 - [HealthState](docs/HealthState.md)
 - [HealthStateCount](docs/HealthStateCount.md)
 - [HealthStatistics](docs/HealthStatistics.md)
 - [HostIsolationMode](docs/HostIsolationMode.md)
 - [HostType](docs/HostType.md)
 - [ImageStoreContent](docs/ImageStoreContent.md)
 - [ImageStoreCopyDescription](docs/ImageStoreCopyDescription.md)
 - [Int64PropertyValue](docs/Int64PropertyValue.md)
 - [Int64RangePartitionInformation](docs/Int64RangePartitionInformation.md)
 - [InvokeDataLossResult](docs/InvokeDataLossResult.md)
 - [InvokeQuorumLossResult](docs/InvokeQuorumLossResult.md)
 - [KeyValueStoreReplicaStatus](docs/KeyValueStoreReplicaStatus.md)
 - [LoadMetricReport](docs/LoadMetricReport.md)
 - [LoadMetricReportInfo](docs/LoadMetricReportInfo.md)
 - [MonitoringPolicyDescription](docs/MonitoringPolicyDescription.md)
 - [MoveCost](docs/MoveCost.md)
 - [NameDescription](docs/NameDescription.md)
 - [NamedPartitionInformation](docs/NamedPartitionInformation.md)
 - [NamedPartitionSchemeDescription](docs/NamedPartitionSchemeDescription.md)
 - [NodeAbortedEvent](docs/NodeAbortedEvent.md)
 - [NodeAbortingEvent](docs/NodeAbortingEvent.md)
 - [NodeAddedEvent](docs/NodeAddedEvent.md)
 - [NodeCloseEvent](docs/NodeCloseEvent.md)
 - [NodeClosingEvent](docs/NodeClosingEvent.md)
 - [NodeDeactivateCompleteEvent](docs/NodeDeactivateCompleteEvent.md)
 - [NodeDeactivateStartEvent](docs/NodeDeactivateStartEvent.md)
 - [NodeDeactivationInfo](docs/NodeDeactivationInfo.md)
 - [NodeDeactivationIntent](docs/NodeDeactivationIntent.md)
 - [NodeDeactivationStatus](docs/NodeDeactivationStatus.md)
 - [NodeDeactivationTask](docs/NodeDeactivationTask.md)
 - [NodeDeactivationTaskId](docs/NodeDeactivationTaskId.md)
 - [NodeDeactivationTaskType](docs/NodeDeactivationTaskType.md)
 - [NodeDownEvent](docs/NodeDownEvent.md)
 - [NodeEvent](docs/NodeEvent.md)
 - [NodeHealth](docs/NodeHealth.md)
 - [NodeHealthEvaluation](docs/NodeHealthEvaluation.md)
 - [NodeHealthReportCreatedEvent](docs/NodeHealthReportCreatedEvent.md)
 - [NodeHealthReportExpiredEvent](docs/NodeHealthReportExpiredEvent.md)
 - [NodeHealthState](docs/NodeHealthState.md)
 - [NodeHealthStateChunk](docs/NodeHealthStateChunk.md)
 - [NodeHealthStateChunkList](docs/NodeHealthStateChunkList.md)
 - [NodeHealthStateFilter](docs/NodeHealthStateFilter.md)
 - [NodeId](docs/NodeId.md)
 - [NodeImpact](docs/NodeImpact.md)
 - [NodeInfo](docs/NodeInfo.md)
 - [NodeLoadInfo](docs/NodeLoadInfo.md)
 - [NodeLoadMetricInformation](docs/NodeLoadMetricInformation.md)
 - [NodeOpenFailedEvent](docs/NodeOpenFailedEvent.md)
 - [NodeOpenedSuccessEvent](docs/NodeOpenedSuccessEvent.md)
 - [NodeOpeningEvent](docs/NodeOpeningEvent.md)
 - [NodeRemovedEvent](docs/NodeRemovedEvent.md)
 - [NodeRepairImpactDescription](docs/NodeRepairImpactDescription.md)
 - [NodeRepairTargetDescription](docs/NodeRepairTargetDescription.md)
 - [NodeResult](docs/NodeResult.md)
 - [NodeStatus](docs/NodeStatus.md)
 - [NodeTransitionProgress](docs/NodeTransitionProgress.md)
 - [NodeTransitionResult](docs/NodeTransitionResult.md)
 - [NodeUpEvent](docs/NodeUpEvent.md)
 - [NodeUpgradePhase](docs/NodeUpgradePhase.md)
 - [NodeUpgradeProgressInfo](docs/NodeUpgradeProgressInfo.md)
 - [NodesHealthEvaluation](docs/NodesHealthEvaluation.md)
 - [OperationState](docs/OperationState.md)
 - [OperationStatus](docs/OperationStatus.md)
 - [OperationType](docs/OperationType.md)
 - [PackageSharingPolicyInfo](docs/PackageSharingPolicyInfo.md)
 - [PackageSharingPolicyScope](docs/PackageSharingPolicyScope.md)
 - [PagedApplicationInfoList](docs/PagedApplicationInfoList.md)
 - [PagedApplicationTypeInfoList](docs/PagedApplicationTypeInfoList.md)
 - [PagedBackupConfigurationInfoList](docs/PagedBackupConfigurationInfoList.md)
 - [PagedBackupEntityList](docs/PagedBackupEntityList.md)
 - [PagedBackupInfoList](docs/PagedBackupInfoList.md)
 - [PagedBackupPolicyDescriptionList](docs/PagedBackupPolicyDescriptionList.md)
 - [PagedComposeDeploymentStatusInfoList](docs/PagedComposeDeploymentStatusInfoList.md)
 - [PagedDeployedApplicationInfoList](docs/PagedDeployedApplicationInfoList.md)
 - [PagedNodeInfoList](docs/PagedNodeInfoList.md)
 - [PagedPropertyInfoList](docs/PagedPropertyInfoList.md)
 - [PagedReplicaInfoList](docs/PagedReplicaInfoList.md)
 - [PagedServiceInfoList](docs/PagedServiceInfoList.md)
 - [PagedServicePartitionInfoList](docs/PagedServicePartitionInfoList.md)
 - [PagedSubNameInfoList](docs/PagedSubNameInfoList.md)
 - [PartitionAccessStatus](docs/PartitionAccessStatus.md)
 - [PartitionAnalysisEvent](docs/PartitionAnalysisEvent.md)
 - [PartitionBackupConfigurationInfo](docs/PartitionBackupConfigurationInfo.md)
 - [PartitionBackupEntity](docs/PartitionBackupEntity.md)
 - [PartitionDataLossProgress](docs/PartitionDataLossProgress.md)
 - [PartitionEvent](docs/PartitionEvent.md)
 - [PartitionHealth](docs/PartitionHealth.md)
 - [PartitionHealthEvaluation](docs/PartitionHealthEvaluation.md)
 - [PartitionHealthReportCreatedEvent](docs/PartitionHealthReportCreatedEvent.md)
 - [PartitionHealthReportExpiredEvent](docs/PartitionHealthReportExpiredEvent.md)
 - [PartitionHealthState](docs/PartitionHealthState.md)
 - [PartitionHealthStateChunk](docs/PartitionHealthStateChunk.md)
 - [PartitionHealthStateChunkList](docs/PartitionHealthStateChunkList.md)
 - [PartitionHealthStateFilter](docs/PartitionHealthStateFilter.md)
 - [PartitionInformation](docs/PartitionInformation.md)
 - [PartitionInstanceCountScaleMechanism](docs/PartitionInstanceCountScaleMechanism.md)
 - [PartitionLoadInformation](docs/PartitionLoadInformation.md)
 - [PartitionPrimaryMoveAnalysisEvent](docs/PartitionPrimaryMoveAnalysisEvent.md)
 - [PartitionQuorumLossProgress](docs/PartitionQuorumLossProgress.md)
 - [PartitionReconfigurationCompletedEvent](docs/PartitionReconfigurationCompletedEvent.md)
 - [PartitionRestartProgress](docs/PartitionRestartProgress.md)
 - [PartitionSafetyCheck](docs/PartitionSafetyCheck.md)
 - [PartitionScheme](docs/PartitionScheme.md)
 - [PartitionSchemeDescription](docs/PartitionSchemeDescription.md)
 - [PartitionsHealthEvaluation](docs/PartitionsHealthEvaluation.md)
 - [PrimaryReplicatorStatus](docs/PrimaryReplicatorStatus.md)
 - [ProcessDeactivatedEvent](docs/ProcessDeactivatedEvent.md)
 - [PropertyBatchDescriptionList](docs/PropertyBatchDescriptionList.md)
 - [PropertyBatchInfo](docs/PropertyBatchInfo.md)
 - [PropertyBatchInfoKind](docs/PropertyBatchInfoKind.md)
 - [PropertyBatchOperation](docs/PropertyBatchOperation.md)
 - [PropertyBatchOperationKind](docs/PropertyBatchOperationKind.md)
 - [PropertyDescription](docs/PropertyDescription.md)
 - [PropertyInfo](docs/PropertyInfo.md)
 - [PropertyMetadata](docs/PropertyMetadata.md)
 - [PropertyValue](docs/PropertyValue.md)
 - [PropertyValueKind](docs/PropertyValueKind.md)
 - [ProvisionApplicationTypeDescription](docs/ProvisionApplicationTypeDescription.md)
 - [ProvisionApplicationTypeDescriptionBase](docs/ProvisionApplicationTypeDescriptionBase.md)
 - [ProvisionApplicationTypeKind](docs/ProvisionApplicationTypeKind.md)
 - [ProvisionFabricDescription](docs/ProvisionFabricDescription.md)
 - [PutPropertyBatchOperation](docs/PutPropertyBatchOperation.md)
 - [ReconfigurationInformation](docs/ReconfigurationInformation.md)
 - [ReconfigurationPhase](docs/ReconfigurationPhase.md)
 - [ReconfigurationType](docs/ReconfigurationType.md)
 - [RegistryCredential](docs/RegistryCredential.md)
 - [RemoteReplicatorAcknowledgementDetail](docs/RemoteReplicatorAcknowledgementDetail.md)
 - [RemoteReplicatorAcknowledgementStatus](docs/RemoteReplicatorAcknowledgementStatus.md)
 - [RemoteReplicatorStatus](docs/RemoteReplicatorStatus.md)
 - [RepairImpactDescriptionBase](docs/RepairImpactDescriptionBase.md)
 - [RepairImpactKind](docs/RepairImpactKind.md)
 - [RepairTargetDescriptionBase](docs/RepairTargetDescriptionBase.md)
 - [RepairTargetKind](docs/RepairTargetKind.md)
 - [RepairTask](docs/RepairTask.md)
 - [RepairTaskApproveDescription](docs/RepairTaskApproveDescription.md)
 - [RepairTaskCancelDescription](docs/RepairTaskCancelDescription.md)
 - [RepairTaskDeleteDescription](docs/RepairTaskDeleteDescription.md)
 - [RepairTaskHealthCheckState](docs/RepairTaskHealthCheckState.md)
 - [RepairTaskHistory](docs/RepairTaskHistory.md)
 - [RepairTaskUpdateHealthPolicyDescription](docs/RepairTaskUpdateHealthPolicyDescription.md)
 - [RepairTaskUpdateInfo](docs/RepairTaskUpdateInfo.md)
 - [ReplicaEvent](docs/ReplicaEvent.md)
 - [ReplicaHealth](docs/ReplicaHealth.md)
 - [ReplicaHealthEvaluation](docs/ReplicaHealthEvaluation.md)
 - [ReplicaHealthState](docs/ReplicaHealthState.md)
 - [ReplicaHealthStateChunk](docs/ReplicaHealthStateChunk.md)
 - [ReplicaHealthStateChunkList](docs/ReplicaHealthStateChunkList.md)
 - [ReplicaHealthStateFilter](docs/ReplicaHealthStateFilter.md)
 - [ReplicaInfo](docs/ReplicaInfo.md)
 - [ReplicaKind](docs/ReplicaKind.md)
 - [ReplicaRole](docs/ReplicaRole.md)
 - [ReplicaStatus](docs/ReplicaStatus.md)
 - [ReplicaStatusBase](docs/ReplicaStatusBase.md)
 - [ReplicasHealthEvaluation](docs/ReplicasHealthEvaluation.md)
 - [ReplicatorOperationName](docs/ReplicatorOperationName.md)
 - [ReplicatorQueueStatus](docs/ReplicatorQueueStatus.md)
 - [ReplicatorStatus](docs/ReplicatorStatus.md)
 - [ResolvedServiceEndpoint](docs/ResolvedServiceEndpoint.md)
 - [ResolvedServicePartition](docs/ResolvedServicePartition.md)
 - [RestartDeployedCodePackageDescription](docs/RestartDeployedCodePackageDescription.md)
 - [RestartNodeDescription](docs/RestartNodeDescription.md)
 - [RestartPartitionResult](docs/RestartPartitionResult.md)
 - [RestorePartitionDescription](docs/RestorePartitionDescription.md)
 - [RestoreProgressInfo](docs/RestoreProgressInfo.md)
 - [RestoreState](docs/RestoreState.md)
 - [ResumeApplicationUpgradeDescription](docs/ResumeApplicationUpgradeDescription.md)
 - [ResumeClusterUpgradeDescription](docs/ResumeClusterUpgradeDescription.md)
 - [RollingUpgradeUpdateDescription](docs/RollingUpgradeUpdateDescription.md)
 - [SafetyCheck](docs/SafetyCheck.md)
 - [SafetyCheckKind](docs/SafetyCheckKind.md)
 - [SafetyCheckWrapper](docs/SafetyCheckWrapper.md)
 - [ScalingMechanismDescription](docs/ScalingMechanismDescription.md)
 - [ScalingMechanismKind](docs/ScalingMechanismKind.md)
 - [ScalingPolicyDescription](docs/ScalingPolicyDescription.md)
 - [ScalingTriggerDescription](docs/ScalingTriggerDescription.md)
 - [ScalingTriggerKind](docs/ScalingTriggerKind.md)
 - [SecondaryActiveReplicatorStatus](docs/SecondaryActiveReplicatorStatus.md)
 - [SecondaryIdleReplicatorStatus](docs/SecondaryIdleReplicatorStatus.md)
 - [SecondaryReplicatorStatus](docs/SecondaryReplicatorStatus.md)
 - [SeedNodeSafetyCheck](docs/SeedNodeSafetyCheck.md)
 - [SelectedPartition](docs/SelectedPartition.md)
 - [ServiceBackupConfigurationInfo](docs/ServiceBackupConfigurationInfo.md)
 - [ServiceBackupEntity](docs/ServiceBackupEntity.md)
 - [ServiceCorrelationDescription](docs/ServiceCorrelationDescription.md)
 - [ServiceCorrelationScheme](docs/ServiceCorrelationScheme.md)
 - [ServiceCreatedEvent](docs/ServiceCreatedEvent.md)
 - [ServiceDeletedEvent](docs/ServiceDeletedEvent.md)
 - [ServiceDescription](docs/ServiceDescription.md)
 - [ServiceEndpointRole](docs/ServiceEndpointRole.md)
 - [ServiceEvent](docs/ServiceEvent.md)
 - [ServiceFromTemplateDescription](docs/ServiceFromTemplateDescription.md)
 - [ServiceHealth](docs/ServiceHealth.md)
 - [ServiceHealthEvaluation](docs/ServiceHealthEvaluation.md)
 - [ServiceHealthReportCreatedEvent](docs/ServiceHealthReportCreatedEvent.md)
 - [ServiceHealthReportExpiredEvent](docs/ServiceHealthReportExpiredEvent.md)
 - [ServiceHealthState](docs/ServiceHealthState.md)
 - [ServiceHealthStateChunk](docs/ServiceHealthStateChunk.md)
 - [ServiceHealthStateChunkList](docs/ServiceHealthStateChunkList.md)
 - [ServiceHealthStateFilter](docs/ServiceHealthStateFilter.md)
 - [ServiceInfo](docs/ServiceInfo.md)
 - [ServiceKind](docs/ServiceKind.md)
 - [ServiceLoadMetricDescription](docs/ServiceLoadMetricDescription.md)
 - [ServiceLoadMetricWeight](docs/ServiceLoadMetricWeight.md)
 - [ServiceNameInfo](docs/ServiceNameInfo.md)
 - [ServiceOperationName](docs/ServiceOperationName.md)
 - [ServicePackageActivationMode](docs/ServicePackageActivationMode.md)
 - [ServicePartitionInfo](docs/ServicePartitionInfo.md)
 - [ServicePartitionKind](docs/ServicePartitionKind.md)
 - [ServicePartitionStatus](docs/ServicePartitionStatus.md)
 - [ServicePlacementInvalidDomainPolicyDescription](docs/ServicePlacementInvalidDomainPolicyDescription.md)
 - [ServicePlacementNonPartiallyPlaceServicePolicyDescription](docs/ServicePlacementNonPartiallyPlaceServicePolicyDescription.md)
 - [ServicePlacementPolicyDescription](docs/ServicePlacementPolicyDescription.md)
 - [ServicePlacementPolicyType](docs/ServicePlacementPolicyType.md)
 - [ServicePlacementPreferPrimaryDomainPolicyDescription](docs/ServicePlacementPreferPrimaryDomainPolicyDescription.md)
 - [ServicePlacementRequireDomainDistributionPolicyDescription](docs/ServicePlacementRequireDomainDistributionPolicyDescription.md)
 - [ServicePlacementRequiredDomainPolicyDescription](docs/ServicePlacementRequiredDomainPolicyDescription.md)
 - [ServiceStatus](docs/ServiceStatus.md)
 - [ServiceTypeDescription](docs/ServiceTypeDescription.md)
 - [ServiceTypeExtensionDescription](docs/ServiceTypeExtensionDescription.md)
 - [ServiceTypeHealthPolicy](docs/ServiceTypeHealthPolicy.md)
 - [ServiceTypeHealthPolicyMapItem](docs/ServiceTypeHealthPolicyMapItem.md)
 - [ServiceTypeInfo](docs/ServiceTypeInfo.md)
 - [ServiceTypeManifest](docs/ServiceTypeManifest.md)
 - [ServiceTypeRegistrationStatus](docs/ServiceTypeRegistrationStatus.md)
 - [ServiceUpdateDescription](docs/ServiceUpdateDescription.md)
 - [ServicesHealthEvaluation](docs/ServicesHealthEvaluation.md)
 - [SingletonPartitionInformation](docs/SingletonPartitionInformation.md)
 - [SingletonPartitionSchemeDescription](docs/SingletonPartitionSchemeDescription.md)
 - [StartClusterUpgradeDescription](docs/StartClusterUpgradeDescription.md)
 - [StartedChaosEvent](docs/StartedChaosEvent.md)
 - [StatefulReplicaHealthReportCreatedEvent](docs/StatefulReplicaHealthReportCreatedEvent.md)
 - [StatefulReplicaHealthReportExpiredEvent](docs/StatefulReplicaHealthReportExpiredEvent.md)
 - [StatefulServiceDescription](docs/StatefulServiceDescription.md)
 - [StatefulServiceInfo](docs/StatefulServiceInfo.md)
 - [StatefulServicePartitionInfo](docs/StatefulServicePartitionInfo.md)
 - [StatefulServiceReplicaHealth](docs/StatefulServiceReplicaHealth.md)
 - [StatefulServiceReplicaHealthState](docs/StatefulServiceReplicaHealthState.md)
 - [StatefulServiceReplicaInfo](docs/StatefulServiceReplicaInfo.md)
 - [StatefulServiceTypeDescription](docs/StatefulServiceTypeDescription.md)
 - [StatefulServiceUpdateDescription](docs/StatefulServiceUpdateDescription.md)
 - [StatelessReplicaHealthReportCreatedEvent](docs/StatelessReplicaHealthReportCreatedEvent.md)
 - [StatelessReplicaHealthReportExpiredEvent](docs/StatelessReplicaHealthReportExpiredEvent.md)
 - [StatelessServiceDescription](docs/StatelessServiceDescription.md)
 - [StatelessServiceInfo](docs/StatelessServiceInfo.md)
 - [StatelessServiceInstanceHealth](docs/StatelessServiceInstanceHealth.md)
 - [StatelessServiceInstanceHealthState](docs/StatelessServiceInstanceHealthState.md)
 - [StatelessServiceInstanceInfo](docs/StatelessServiceInstanceInfo.md)
 - [StatelessServicePartitionInfo](docs/StatelessServicePartitionInfo.md)
 - [StatelessServiceTypeDescription](docs/StatelessServiceTypeDescription.md)
 - [StatelessServiceUpdateDescription](docs/StatelessServiceUpdateDescription.md)
 - [StoppedChaosEvent](docs/StoppedChaosEvent.md)
 - [StringPropertyValue](docs/StringPropertyValue.md)
 - [SuccessfulPropertyBatchInfo](docs/SuccessfulPropertyBatchInfo.md)
 - [SystemApplicationHealthEvaluation](docs/SystemApplicationHealthEvaluation.md)
 - [TestErrorChaosEvent](docs/TestErrorChaosEvent.md)
 - [TimeBasedBackupScheduleDescription](docs/TimeBasedBackupScheduleDescription.md)
 - [TimeOfDay](docs/TimeOfDay.md)
 - [TimeRange](docs/TimeRange.md)
 - [UniformInt64RangePartitionSchemeDescription](docs/UniformInt64RangePartitionSchemeDescription.md)
 - [UnprovisionApplicationTypeDescriptionInfo](docs/UnprovisionApplicationTypeDescriptionInfo.md)
 - [UnprovisionFabricDescription](docs/UnprovisionFabricDescription.md)
 - [UpdateClusterUpgradeDescription](docs/UpdateClusterUpgradeDescription.md)
 - [UpgradeDomainDeltaNodesCheckHealthEvaluation](docs/UpgradeDomainDeltaNodesCheckHealthEvaluation.md)
 - [UpgradeDomainInfo](docs/UpgradeDomainInfo.md)
 - [UpgradeDomainNodesHealthEvaluation](docs/UpgradeDomainNodesHealthEvaluation.md)
 - [UpgradeDomainState](docs/UpgradeDomainState.md)
 - [UpgradeKind](docs/UpgradeKind.md)
 - [UpgradeMode](docs/UpgradeMode.md)
 - [UpgradeOrchestrationServiceState](docs/UpgradeOrchestrationServiceState.md)
 - [UpgradeOrchestrationServiceStateSummary](docs/UpgradeOrchestrationServiceStateSummary.md)
 - [UpgradeState](docs/UpgradeState.md)
 - [UpgradeType](docs/UpgradeType.md)
 - [UploadChunkRange](docs/UploadChunkRange.md)
 - [UploadSession](docs/UploadSession.md)
 - [UploadSessionInfo](docs/UploadSessionInfo.md)
 - [ValidationFailedChaosEvent](docs/ValidationFailedChaosEvent.md)
 - [WaitForInbuildReplicaSafetyCheck](docs/WaitForInbuildReplicaSafetyCheck.md)
 - [WaitForPrimaryPlacementSafetyCheck](docs/WaitForPrimaryPlacementSafetyCheck.md)
 - [WaitForPrimarySwapSafetyCheck](docs/WaitForPrimarySwapSafetyCheck.md)
 - [WaitForReconfigurationSafetyCheck](docs/WaitForReconfigurationSafetyCheck.md)
 - [WaitingChaosEvent](docs/WaitingChaosEvent.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization

Endpoints do not require authorization.


## Author




